--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "chalk": "^4.1.1",
         "cfonts": "^2.10.0",
-        "js-yaml": "^4.1.0"
+        "js-yaml": "^4.1.0",
+        "shelljs": "^0.8.5"
     }
 }
