--- a/settings.yml
+++ b/settings.yml
@@ -1,5 +1,5 @@
 # ////////////////| [⚙️] | Settings | [🛠️] |//////////////// #
-
+# > Please delete/replace the config.json file with your own configuration from the XMRig Wizard - (https://xmrig.com/wizard)
 # if you need help just contact me though Discord TheH2SO4#0284
 
 # | Wallet settings
