--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "chalk": "^4.1.1",
         "cfonts": "^2.10.0",
         "js-yaml": "^4.1.0",
-        "shelljs": "^0.8.5"
+        "shelljs": "^0.8.5",
+        "node-fetch": "^2.6.1"
     }
 }
